--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @import '/src/sass/main/about-us.scss';
 @import '/src/sass/main/articles.scss';
 @import '/src/sass/main/subscription.scss';
+@import '/src/sass/main/footer.scss';
 
 
 
