rendering by button

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,6 +8,7 @@
 @import '/src/sass/main/articles.scss';
 @import '/src/sass/main/subscription.scss';
 @import '/src/sass/main/footer.scss';
+@import '/src/sass/main/bestseller.scss';
 
 
 
