--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import '/src/sass/main/subscription.scss';
 @import '/src/sass/main/footer.scss';
 @import '/src/sass/main/bestseller.scss';
+@import '/src/sass/main/about.scss';
 
 
 
