local storage and modal

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,7 @@
 @import '/src/sass/main/footer.scss';
 @import '/src/sass/main/bestseller.scss';
 @import '/src/sass/main/about.scss';
+@import '/src/sass/main/modal.scss';
 
 
 
