--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,7 +11,7 @@
 @import '/src/sass/main/bestseller.scss';
 @import '/src/sass/main/about.scss';
 @import '/src/sass/main/modal.scss';
-
+@import '/src/sass/main/callBackModal.scss';
 
 
 body{
