callBackModal.js update

--- a/src/sass/main/about.scss
+++ b/src/sass/main/about.scss
@@ -43,6 +43,8 @@
                 position: absolute;
                 top: 50%;
                 transform: translateY(-50%);
+                border-radius: 50%;
+                box-shadow: none;
             }
             .slider-prev{
                 left: 0;
