--- a/src/sass/main/header.scss
+++ b/src/sass/main/header.scss
@@ -161,7 +161,7 @@
                         margin-right: 8px;
                     }
                 }
-                .callback__btn{
+                .call-back__btn{
                     width: 223px;
                     height: 44px;
                     background-color: $colorOrange;
