--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -20,6 +20,12 @@ body{
 }
 .btn:hover{
     cursor: pointer;
+    -webkit-box-shadow: 4px 4px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 4px 4px 2px 2px rgba(0, 0, 0, 0.3);
+    &:active{
+        opacity: 0.8;
+        
+    }
 }
 *{
     padding: 0;
