--- a/src/sass/main/footer.scss
+++ b/src/sass/main/footer.scss
@@ -39,6 +39,10 @@
                 border-radius: 6px;
                 background-color: $colorOrange;
                 @include fontz($ubuntu,$fst,400,18px,22px,$colorDefaultWhite);
+                &:hover{
+                    -webkit-box-shadow: 4px 4px 2px 2px rgba(255, 255, 255, 0.3);
+                    box-shadow: 4px 4px 2px 2px rgba(255, 255, 255, 0.3);
+                }
             }
         }
     }
