--- a/src/sass/main/callBackModal.scss
+++ b/src/sass/main/callBackModal.scss
@@ -71,6 +71,7 @@
                 outline: none;
                 padding-left: 15px;
                 border-radius: 5px;
+                border: 1px solid black;
             }
             &>label{
                 flex-shrink: 0;
