create search.js ,changes

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,7 @@
 @import '/src/sass/main/about.scss';
 @import '/src/sass/main/modal.scss';
 @import '/src/sass/main/callBackModal.scss';
+@import '/src/sass/main/searchContainer.scss';
 
 
 body{
